fixing padding after header so it applies to instructions box now and does not jump as much when scrolling down

--- a/SpotifyTrackFilter/style.css
+++ b/SpotifyTrackFilter/style.css
@@ -171,7 +171,7 @@ img {
 }
 
 /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + #results-box {
+.sticky + #readme-box {
   margin-top: 115px;
 }
 
